# cuga-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  .profiling-guide.md  .secrets.baseline  CONTRIBUTING.md  PROFILING_README.md  README.md  config.py  playground_azure.py  profile_digital_sales_tasks.py  profiling_report_20250929_001307.json  profiling_report_20250929_001907.json  profiling_report_20250929_002132.json  profiling_report_20250929_002338.json  profiling_report_20250929_003015.json  profiling_report_20250929_003448.json  profiling_report_20250929_004349.json  profiling_report_20250929_004728.json  pyproject.toml  ruff.toml  run_experiment.sh  run_profiling.sh  update_html.py
.cra/: .fileignore
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  use_case.yml
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  chore.md  docs.md  feature.md
.run/: API Registry Appworld.run.xml  API Registry Demo.run.xml  App World Eval.run.xml  Cuga Demo.run.xml
configurations/: instructions_manager.py
configurations/instructions/: .gitignore
cuga/backend/activity_tracker/: tracker.py
cuga/backend/server/: main.py
cuga/backend/utils/: code_generator.py
docs/: embedded_assets.md  flags.html  sales_app.html
docs/examples/cuga_as_mcp/: .env.example  README.md  main.py  pyproject.toml
docs/examples/cuga_with_runtime_tools/: .env.example  README.md  fast_mcp_example.py  langchain_example_tool.py  main.py  mcp_servers.yaml  pyproject.toml
docs/examples/digital_sales_openapi/: main.py
docs/examples/evaluation/: input_example.json  input_schema.json
experiments/: balanced_20250929_011236.json  comparison.html  fast_20250929_011021.json  run.sh
frontend-workspaces/: .gitignore  pnpm-lock.yaml
frontend-workspaces/agentic_chat/: package.json
frontend-workspaces/extension/: .editorconfig  .env.example  .gitignore  package.json
scripts/: commands.py  embed_assets.py  run_tests.sh
src/: config.py
src/cuga/: cli.py  config.py  settings.toml
src/frontend_workspaces/: pnpm-lock.yaml
src/scripts/: build_embedded.py  build_standalone.py  commands.py  draw_graph.py  run_tests.sh
(+75 files in other folders)
